--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,20 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugin>
+    <groupId>org.sonarsource.scanner.maven</groupId>
+    <artifactId>sonar-maven-plugin</artifactId>
+    <version>4.0.0.4121</version>
+    <executions>
+        <execution>
+            <id>sonar-analysis</id>
+            <phase>verify</phase>
+            <goals>
+                <goal>sonar</goal>
+            </goals>
+        </execution>
+    </executions>
+</plugin>
     </build>
     <distributionManagement>
         <snapshotRepository>
